crates/warden-jarmeta/tests/snapshots/corpus__forge-1.20.1-embeddium.snap
---
source: crates/warden-jarmeta/tests/corpus.rs
description: "forge-1.20.1-embeddium (Minecraft 1.20.1, loader forge)"
---
{
  "descriptors": [
    "modsToml",
    "jarJarMetadata",
    "manifest"
  ],
  "mods": [
    {
      "source": "modsToml",
      "loader": "forge",
      "id": "embeddium",
      "version": "0.3.31+mc1.20.1",
      "name": "Embeddium",
      "description": "Embeddium is a fork of Rubidium, a fork of Sodium with patches for Forge",
      "authors": [
        "embeddedt"
      ],
      "licenses": [
        "LGPL-3.0-only"
      ],
      "dependencies": [
        {
          "id": "oculus",
          "kind": "optional",
          "range": {
            "dialect": "maven",
            "spec": "(1.6.15,)"
          },
          "side": "client",
          "ordering": "before"
        },
        {
          "id": "textrues_embeddium_options",
          "kind": "optional",
          "range": {
            "dialect": "maven",
            "spec": "[0.0.0-NOT-COMPATIBLE]"
          },
          "side": "client",
          "ordering": "before"
        }
      ]
    },
    {
      "source": "modsToml",
      "loader": "forge",
      "id": "rubidium",
      "version": "0.7.1",
      "name": "Rubidium (Embeddium)",
      "description": "Stub, to allow mods detecting Rubidium to function as expected.",
      "licenses": [
        "LGPL-3.0-only"
      ]
    }
  ],
  "languageLoader": {
    "name": "javafml",
    "version": {
      "dialect": "maven",
      "spec": "[47,)"
    }
  },
  "manifest": {
    "mixinConfigs": [
      "embeddium.mixins.json"
    ]
  },
  "classVersion": {
    "major": 61,
    "minor": 0
  },
  "nested": [
    {
      "path": "META-INF/jarjar/mixinextras-forge-0.3.5.jar",
      "declaredBy": "jarJarMetadata",
      "jarjar": {
        "group": "io.github.llamalad7",
        "artifact": "mixinextras-forge",
        "artifactVersion": "0.3.5",
        "range": {
          "dialect": "maven",
          "spec": "[0.3.5,)"
        }
      },
      "metadata": {
        "descriptors": [
          "modsToml",
          "jarJarMetadata",
          "manifest"
        ],
        "mods": [
          {
            "source": "modsToml",
            "loader": "forge",
            "id": "mixinextras",
            "version": "0.3.5",
            "name": "MixinExtras",
            "description": "Companion library to Mixin with lots of features to improve the compatibility and concision of your mixins!",
            "authors": [
              "LlamaLad7"
            ],
            "licenses": [
              "MIT"
            ]
          }
        ],
        "languageLoader": {
          "name": "javafml",
          "version": {
            "dialect": "maven",
            "spec": "*"
          }
        },
        "manifest": {
          "mixinConfigs": [
            "mixinextras.init.mixins.json"
          ],
          "fmlModType": "GAMELIBRARY"
        },
        "classVersion": {
          "major": 61,
          "minor": 0
        },
        "nested": [
          {
            "path": "META-INF/jars/MixinExtras-0.3.5.jar",
            "declaredBy": "jarJarMetadata",
            "jarjar": {
              "group": "com.github.LlamaLad7",
              "artifact": "MixinExtras",
              "artifactVersion": "0.3.5",
              "range": {
                "dialect": "maven",
                "spec": "[0.3.5,)"
              }
            },
            "metadata": {
              "descriptors": [
                "manifest"
              ],
              "manifest": {},
              "classVersion": {
                "major": 52,
                "minor": 0
              }
            }
          }
        ]
      }
    }
  ]
}
